docs(plans): second-pass readiness fixes to the scoped-tracing plans
Applies the fixes from a fresh multi-dimension readiness review (codebase
+ analysis doc + online references, adversarially verified). No blockers;
four localized majors + external-fact corrections, each gating only its
own slice.

Core (scoped-tracing-core-plan.md):
- M1: reconcile the self-contradictory test_try_begin_busy spec — at §0
  (no range stack yet) provoke busy via a second begin and assert ESTATE;
  §1 rewrites it to fill the range stack and assert EFULL (drop the false
  "survives §0->§1 unchanged" claim).
- M3: §1 TLS async-signal-safety — the dlopen'd lib's general-dynamic TLS
  first-touch can route through __tls_get_addr/malloc, unsafe in the
  SIGTRAP handler; require tls_model("initial-exec") or a non-TLS atomic
  guard. Keep g_old_sa/g_installed process-global (not TLS) and add an
  explicit process-wide arm-refcount for the disposition restore.
- Pin the version-/handle-aware render owner (asmtest_hwtrace_render_scope)
  in §1, additively over §0.3's name-keyed primitive.
- §2: note Intel PT's nr_addr_filters hardware limit; fix the asmtest_proc_*
  path generalization (/tmp/perf-<pid>.map).
- Fix stale anchors: install-shared-hwtrace :677-688; codeimage CI job runs
  docker-hwtrace-codeimage.

Bindings (scoped-tracing-bindings-plan.md):
- M2: the .NET AsmTrace ctor had no region to register — specify the region
  source (code param vs pre-registered name). Drop string? under
  Nullable-disable; clarify render-always/emit-gates-sink; note the
  ModuleInitializer packaging requirement; managed-id is a complementary
  guard to the native OS-tid assert; collision-resistant auto-name fallback.
- Fix hwtrace-bindings-test anchor (:556).

Managed (scoped-tracing-managed-plan.md):
- M4: §D2 JVM address resolution is the in-process jitdump agent +
  asmtest_jitdump_find, not offline "perf inject --jit".
- .NET: EnablePerfMap has no sendExisting param; AsyncLocal value-changed
  handle